# Data-Analyst-Portfolio

./: .gitignore  main.py  pandas-course-ershov.ipynb  pandas-stepik.ipynb  pandas_tutorial.ipynb  pyproject.toml
Excel/: Excel_projects.md  N-day retention & WAU-MAU-DAU calc.xlsx  README.md
Python/: Data Analysis on Hotel Booking.ipynb  matplotlib.ipynb  pandas-course-ershov.ipynb
SQL/: README.md
Tableau/: README.md
